tests/build/fail/impl_ui_node/delegate_expr_error_no_field.stderr
error[E0609]: no field `iner` on type `&mut Node<C>`
 --> $DIR/delegate_expr_error_no_field.rs:6:65
  |
6 | #[impl_ui_node(delegate = &self.inner, delegate_mut = &mut self.iner)]
  |                                                                 ^^^^ help: a field with a similar name exists: `inner`
